[Fix] 첫 렌더링시에 window.ScrollY이 존재하지않아서  toTop 버튼이 보이는 버그 해결

--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
       </div>
     </footer>
 
-    <div id="to-top">
+    <div id="to-top" class="hide">
       <div class="material-icons">arrow_upward</div>
     </div>
   </body>
