[Fix]공통 모듈 분리

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/common.css" />
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
@@ -63,6 +64,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <script defer src="./js/youtube.js"></script>
+    <script defer src="./js/common.js"></script>
     <script defer src="./js/main.js"></script>
   </head>
   <body>
